página malaria finalizado

--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -189,17 +189,111 @@
                         </p>
                         <br>
                         <p>
-                            <li>Região Amazônica: a malária é uma doença de notificação compulsória regular e todo caso suspeito de malária deve ser notificado em até sete dias às autoridades de saúde por meio da <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/ficha-de-notificacao-sivep-malaria-v03-08-2020.pdf">ficha de notificação do Sivep-Malária</a>, sendo que as informações coletadas deverão ser registradas no Sistema de Informação de Vigilância Epidemiológica - Malária (Sivep-Malária). Todos os exames de controle de cura devem também ser notificados. Orientações para o preenchimento da ficha de notificação do Sivep-Malária estão disponíveis no folder "<a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/folder_orientacoes-para-o-preenchimento-do-sivep-malaria.pdf">Orientações para o preenchimento do Sivep-Malária</a>".</li>
+                            <li>Região Amazônica: a malária é uma doença de notificação compulsória regular e todo caso suspeito de malária deve ser notificado em até sete dias às autoridades de saúde por meio da <a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/ficha-de-notificacao-sivep-malaria-v03-08-2020.pdf">ficha de notificação do Sivep-Malária</a>, sendo que as informações coletadas deverão ser registradas no Sistema de Informação de Vigilância Epidemiológica - Malária (Sivep-Malária). Todos os exames de controle de cura devem também ser notificados. Orientações para o preenchimento da ficha de notificação do Sivep-Malária estão disponíveis no folder "<a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/folder_orientacoes-para-o-preenchimento-do-sivep-malaria.pdf">Orientações para o preenchimento do Sivep-Malária</a>".</li>
                         </p>
                         <br>
                         <p>
                             <li>Região Extra-Amazônica: a malária é uma doença de notificação compulsória imediata, portanto, todo caso suspeito deve ser notificado às autoridades de saúde em até 24 (vinte e quatro) horas, pelo meio mais rápido disponível, tais como telefone, fax, e-mail e no Sistema Nacional de Agravos de Notificação (Sinan) por meio da
-                            <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/fichanotificacaomalaria-sinan.pdf">ficha de notificação e investigação do SINAN</a>,com posterior “encerramento” do registro da notificação completa no sistema no prazo máximo de 30 dias. Todos os exames de verificação de cura (positivos e negativos) devem ser notificados.
+                            <a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/fichanotificacaomalaria-sinan.pdf">ficha de notificação e investigação do SINAN</a>,com posterior “encerramento” do registro da notificação completa no sistema no prazo máximo de 30 dias. Todos os exames de verificação de cura (positivos e negativos) devem ser notificados.
                             </li>
                         </p>
                         <br>
-                        <p></p>
-                       <p class="bold"><b></b></p>
+                        <p>
+                            A identificação dos casos suspeitos pode ocorrer por detecção passiva, quando o paciente procurar a unidade de saúde notificante para atendimento; ou detecção ativa, quando o profissional de saúde se desloca aos locais de residência, trabalho ou lazer dos indivíduos oferecendo atendimento.
+                        </p>
+                        <br>
+                        <p>
+                            Na impossibilidade de comunicação à SMS e à SES, a notificação deverá ser realizada à SVS/MS por um dos seguintes meios de comunicação:
+                        </p>
+                        <br>
+                        <p>
+                            <li>disque notifica (0800-644-6645);</li>
+                            <li>notificação eletrônica pelo e-mail: <notifica@saude.gov.br; href="notifica@saude.gov.br">notifica@saude.gov.br;</a></li>
+                        </p>
+                        <br>
+                       <p>
+                        Preenchimento das fichas de notificação: Uma vez que cada um dos dados registrados nas fichas de notificação e, posteriormente, digitados, é essencial para o entendimento da situação epidemiológica o cálculo de indicadores para subsidiar o direcionamento das atividades de prevenção, controle e eliminação da malária. É importante reforçar aos profissionais responsáveis pela notificação dos casos que todos os campos da ficha devem ser criteriosamente preenchidos e digitados. Portanto, devem ser evitados campos em branco, duplicidades de registros e dados inconsistentes. Para garantir uma boa qualidade na informação é necessária uma avaliação sistemática dos dados coletados e digitados em todos os níveis do sistema. 
+                       </p>
+                       <br>
+                       <p class="bold">
+                            <b>Centros para diagnóstico e tratamento</b>
+                       </p>
+                       <br>
+                       <p class="important">
+                        Unidades de atendimento para diagnóstico e tratamento de malária 
+                       </p>
+                       <br>
+                       <p>
+                        É fundamental que os profissionais de saúde fiquem atentos aos pacientes procedentes das áreas de transmissão da malária que apresentam sintomatologia clínica sugestiva da doença. Muitas vezes, esses pacientes sofrem com diagnóstico tardio pela não suspeita inicial de malária, o que pode ocasionar o agravamento do quadro ou óbito. 
+                       </p>
+                       <br>
+                       <p>
+                        <a href="https://portal.fiocruz.br/servico/laboratorio-de-pesquisa-em-malaria#:~:text=A%20Fiocruz%20tamb%C3%A9m%20disponibiliza%20um,febril%20com%20suspeita%20da%20doen%C3%A7a">Apoio do Laboratório de Pesquisa em Malária na Fundação Oswaldo Cruz – Malária Fone</a>
+                       </p>
+                       <br>
+                       <p>
+                        A Fiocruz disponibiliza um telefone para fornecimento de informações, das 8h às 18h, sobre a malária e os locais para o seu diagnóstico: +55 21 9988-0113. Ele pode ser acionado 24h por dia em caso de emergência (paciente febril com suspeita da doença).
+                       </p>
+                       <br>
+                       <table>
+                        <tr>
+                            <td>ACRE (AC)</td>
+                            <td>ALAGOAS (AL)</td>
+                            <td>AMAPÁ (AP)</td>
+                        </tr>
+                        <tr>
+                            <td>AMAZONAS (AM)</td>
+                            <td>BAHIA (BA)</td>
+                            <td>CEARÁ (CE)</td>
+                        </tr>
+                        <tr>
+                            <td>DISTRITO FEDERAL (DF)</td>
+                            <td>ESPÍRITO SANTO (ES)</td>
+                            <td>GOIÁS (GO)</td>
+                        </tr>
+                        <tr>
+                            <td>MARANHÃO (MA)</td>
+                            <td>MATO GROSSO (MT)</td>
+                            <td>MATO GROSSO DO SUL (MS)</td>
+                        </tr>
+                        <tr>
+                            <td>MINAS GERAIS (MG)</td>
+                            <td>PARÁ (PA)</td>
+                            <td>PARAÍBA (PB)</td>
+                        </tr>
+                        <tr>
+                            <td>PARANÁ (PR)</td>
+                            <td>PERNAMBUCO (PE)</td>
+                            <td>PIAUÍ (PI)</td>
+                        </tr>
+                        <tr>
+                            <td>RIO GRANDE DO NORTE (RN)</td>
+                            <td>RIO GRANDE DO SUL (RS)</td>
+                            <td>RIO DE JANEIRO (RJ)</td>
+                        </tr>
+                        <tr>
+                            <td>RONDÔNIA (RO)</td>
+                            <td>RORAIMA (RR)</td>
+                            <td>SANTA CATARINA (SC)</td>
+                        </tr>
+                        <tr>
+                            <td>SÃO PAULO (SP)</td>
+                            <td>SERGIPE (SE)</td>
+                            <td>TOCANTINS (TO)</td>
+                        </tr>
+                       </table>
+                       <br>
+                       <p class="bold">
+                            <b>Qualquer dúvida ou informação adicional, favor entrar em contato:</b> 
+                       </p>
+                       <br>
+                       <p>
+                        E-mail: <a href="gtmalaria@saude.gov.br">gtmalaria@saude.gov.br</a>
+                       </p>
+                       <br>
+                       <p>
+                        O usuário também pode buscar mais informações sobre malária ligando para o <a href="https://www.gov.br/anvisa/pt-br/assuntos/tabaco/disque-saude">Disque Saúde</a> 136. O serviço funciona 24 horas e a ligação é gratuita.
+                       </p>
                     </div>
                 </div>
 
