sistema de busca

--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -28,11 +28,9 @@
                         </div>
                     </ul>    
                 </li>  
-
                 <li class="missao"><a href="MissaoEValores.html">Missão e Valores</a></li>
                 <li class="sobre"><a href="QuemSomos.html">Sobre nós</a></li>
             </ul>
-
         </nav>
         
         <div class="tracinho"></div>
@@ -472,8 +470,8 @@
          <p class="fontes">
             <b>Bibliografia:</b> <span><a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria" target="_blank">https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria</a></span>
          </p>
-        <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
-        <a class="button" href="#">BUSCAR</a>
+         <input type="text" id="buscar" placeholder="Digite uma doença para pesquisar..."><br>
+         <a class="button" href="#" onclick="busca()">BUSCAR</a>
 
         <p class="topo">
             <a href="#header">Volta ao topo</a>
@@ -493,5 +491,6 @@
         </div>
     </footer>
 
+    <script src="../script.js"></script>
 </body>
 </html>
