--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -28,11 +28,9 @@
                         </div>
                     </ul>    
                 </li>  
-
                 <li class="missao"><a href="MissaoEValores.html">Missão e Valores</a></li>
                 <li class="sobre"><a href="QuemSomos.html">Sobre nós</a></li>
             </ul>
-
         </nav>
         
         <div class="tracinho"></div>
@@ -265,8 +263,8 @@
             <b>Bibliografia:</b>  <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/t/tuberculose/tuberculose" target="_blank">https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/t/tuberculose/tuberculose</a> 
         </p>
 
-        <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
-        <a class="button" href="#">BUSCAR</a>
+        <input type="text" id="buscar" placeholder="Digite uma doença para pesquisar..."><br>
+        <a class="button" href="#" onclick="busca()">BUSCAR</a>
 
         <p class="topo">
             <a href="#header">Volta ao topo</a>
@@ -285,5 +283,7 @@
             <a href="#"><i class="icon-Vector-4 icon"></i></a>
         </div>
     </footer>
+
+    <script src="../script.js"></script>
 </body>
 </html>
