--- a/pages/HIV.html
+++ b/pages/HIV.html
@@ -673,6 +673,6 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
