--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -284,6 +284,6 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
