--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -461,7 +461,9 @@
                         Base de Dados do SUS
                     </a>
                     <div class="answer">
-                        <p></p>
+                        <center><img src="../img/HIV/dado.svg " alt="dados" class="banco"></center>
+                        <br>
+                        <center><img src="../img/HIV/circulo.svg" alt="circulo" class="circulo"></center>
                     </div>
                 </div>
             </div>
