--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/Styles-Malaria.css">
+    <link rel="stylesheet" href="../styles/Styles-Doencas.css">
     <link rel="stylesheet" href="../icons/style.css">
     <title>Fox Tech Saúde | MALARIA</title>
 </head>
@@ -456,14 +456,22 @@
                 </div>
                 
                 <!-- BANCO DE DADOS SUS-->
-                <div class="accordion-item Base" id="question7">
+                <div class="accordion-item " id="question7">
                     <a href="#question7" class="accordion-link">
                         Base de Dados do SUS
                     </a>
                     <div class="answer">
                         <center><img src="../img/HIV/dado.svg " alt="dados" class="banco"></center>
                         <br>
-                        <center><img src="../img/HIV/circulo.svg" alt="circulo" class="circulo"></center>
+                        <section>
+                        <center>
+                            <div class="spinner1 is-animating">
+                            <div class="spinner2 is-animating">
+                                <div class="spinner3 is-animating"></div>
+                            </div>
+                            </div>
+                        </center>
+                        </section>
                     </div>
                 </div>
             </div>
