--- a/pages/HIV.html
+++ b/pages/HIV.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/Styles-HIV.css">
+    <link rel="stylesheet" href="../styles/Styles-Doencas.css">
     <link rel="stylesheet" href="../icons/style.css">
     <title>Fox Tech Saúde | HIV</title>
 </head>
@@ -643,7 +643,15 @@
                     <div class="answer">
                         <center><img src="../img/HIV/dado.svg " alt="dados" class="banco"></center>
                         <br>
-                        <center><img src="../img/HIV/circulo.svg" alt="circulo" class="circulo"></center>
+                        <section>
+                        <center>
+                            <div class="spinner1 is-animating">
+                            <div class="spinner2 is-animating">
+                                <div class="spinner3 is-animating"></div>
+                            </div>
+                            </div>
+                        </center>
+                        </section>
                     </div>
                 </div>
             </div>
