--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -247,7 +247,7 @@
                     </div>
                 </div>
             
-                <!-- NASE DE DADOS DO SUS-->
+                <!-- BANCO DE DADOS DO SUS-->
                 <div class="accordion-item " id="question7">
                     <a href="#question7" class="accordion-link">
                         Base de Dados do SUS
