--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -463,15 +463,15 @@
                     <div class="answer">
                         <center><img src="../img/HIV/dado.svg " alt="dados" class="banco"></center>
                         <br>
-                        <section>
                         <center>
+                        <section class="background-circle">
                             <div class="spinner1 is-animating">
                             <div class="spinner2 is-animating">
                                 <div class="spinner3 is-animating"></div>
                             </div>
                             </div>
-                        </center>
                         </section>
+                    </center>
                     </div>
                 </div>
             </div>
