--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -151,11 +151,11 @@
                         </p>
                         <br>
                         <p>
-                            O PNCM, baseado em estudos realizados no Brasil e em vários países do mundo, considera que pacientes com PCR positivo para malária, mesmo assintomáticos, podem infectar mosquitos e /ou se tornar sintomáticos, sendo assim devem ser tratados quando o diagnóstico for realizado unicamente por essa técnica molecular. Para essa situação, o item 3 (técnicas moleculares) disponível no campo 43 (tipo de exame) da ficha de notificação do Sivep-Malária deve ser marcado.  Para mais informações, acesse o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil.</a>
+                            O PNCM, baseado em estudos realizados no Brasil e em vários países do mundo, considera que pacientes com PCR positivo para malária, mesmo assintomáticos, podem infectar mosquitos e /ou se tornar sintomáticos, sendo assim devem ser tratados quando o diagnóstico for realizado unicamente por essa técnica molecular. Para essa situação, o item 3 (técnicas moleculares) disponível no campo 43 (tipo de exame) da ficha de notificação do Sivep-Malária deve ser marcado.  Para mais informações, acesse o <a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil.</a>
                         </p>
                         <br>
                         <p>
-                            Todos os casos suspeitos de malária devem ser diagnosticados e todos os resultados positivos para malária devem ser tratados imediatamente e adequadamente. Para mais informações, consulte o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil</a> e o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/folder-teste-rapido-malaria-2020.pdf">folder Testes rápidos para o diagnóstico de malária – Pf/Pf/Pv.</a> 
+                            Todos os casos suspeitos de malária devem ser diagnosticados e todos os resultados positivos para malária devem ser tratados imediatamente e adequadamente. Para mais informações, consulte o <a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil</a> e o <a class="azul" href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/folder-teste-rapido-malaria-2020.pdf">folder Testes rápidos para o diagnóstico de malária – Pf/Pf/Pv.</a> 
                         </p>
                         <br>
                         <p class="important">
@@ -206,7 +206,7 @@
                         <br>
                         <p>
                             <li>disque notifica (0800-644-6645);</li>
-                            <li>notificação eletrônica pelo e-mail: <notifica@saude.gov.br; href="notifica@saude.gov.br">notifica@saude.gov.br;</a></li>
+                            <li>notificação eletrônica pelo e-mail: <a class="azul" href="notifica@saude.gov.br">notifica@saude.gov.br;</a></li>
                         </p>
                         <br>
                        <p>
@@ -226,7 +226,7 @@
                        </p>
                        <br>
                        <p>
-                        <a href="https://portal.fiocruz.br/servico/laboratorio-de-pesquisa-em-malaria#:~:text=A%20Fiocruz%20tamb%C3%A9m%20disponibiliza%20um,febril%20com%20suspeita%20da%20doen%C3%A7a">Apoio do Laboratório de Pesquisa em Malária na Fundação Oswaldo Cruz – Malária Fone</a>
+                        <a class="azul" href="https://portal.fiocruz.br/servico/laboratorio-de-pesquisa-em-malaria#:~:text=A%20Fiocruz%20tamb%C3%A9m%20disponibiliza%20um,febril%20com%20suspeita%20da%20doen%C3%A7a">Apoio do Laboratório de Pesquisa em Malária na Fundação Oswaldo Cruz – Malária Fone</a>
                        </p>
                        <br>
                        <p>
@@ -286,11 +286,11 @@
                        </p>
                        <br>
                        <p>
-                        E-mail: <a href="gtmalaria@saude.gov.br">gtmalaria@saude.gov.br</a>
+                        E-mail: <a class="azul" href="gtmalaria@saude.gov.br">gtmalaria@saude.gov.br</a>
                        </p>
                        <br>
                        <p>
-                        O usuário também pode buscar mais informações sobre malária ligando para o <a href="https://www.gov.br/anvisa/pt-br/assuntos/tabaco/disque-saude">Disque Saúde</a> 136. O serviço funciona 24 horas e a ligação é gratuita.
+                        O usuário também pode buscar mais informações sobre malária ligando para o <a  class="azul" href="https://www.gov.br/anvisa/pt-br/assuntos/tabaco/disque-saude">Disque Saúde</a> 136. O serviço funciona 24 horas e a ligação é gratuita.
                        </p>
                     </div>
                 </div>
