--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -78,11 +78,11 @@
                     </a>
                     <div class="answer">
                         <p>
-                            No Brasil, o diagnóstico da TB é realizado conforme preconizado no <a href="https://www.gov.br/saude/pt-br/centrais-de-conteudo/publicacoes/publicacoes-svs/tuberculose/manual-de-recomendacoes-e-controle-da-ttuberculose-no-brasil-2a-ed.pdf/view">Manual de Recomendações Para o Controle da Tuberculose no Brasil</a>, sendo subdividido em diagnóstico clínico, diferencial, bacteriológico, imagem, histopatológico e por outros testes diagnósticos.
+                            No Brasil, o diagnóstico da TB é realizado conforme preconizado no <a class="azul" href="https://www.gov.br/saude/pt-br/centrais-de-conteudo/publicacoes/publicacoes-svs/tuberculose/manual-de-recomendacoes-e-controle-da-ttuberculose-no-brasil-2a-ed.pdf/view">Manual de Recomendações Para o Controle da Tuberculose no Brasil</a>, sendo subdividido em diagnóstico clínico, diferencial, bacteriológico, imagem, histopatológico e por outros testes diagnósticos.
                         </p>
                         <br>
                         <p>
-                            As orientações e recomendações para o diagnóstico laboratorial de micobactérias estão contidas no <a href="https://www.gov.br/saude/pt-br/centrais-de-conteudo/publicacoes/publicacoes-svs/tuberculose/manual-de-recomendacoes-e-para-diagnostico-laboratorial-de-tuberculose-e-micobacterias-nao-tuberculosas-de-interesse-em-saude-publica-no-brasil.pdf/view"> Manual de Recomendações para o Diagnóstico Laboratorial de Tuberculose e Micobactérias não Tuberculosas de Interesse em Saúde Pública no Brasil.</a>
+                            As orientações e recomendações para o diagnóstico laboratorial de micobactérias estão contidas no <a class="azul" href="https://www.gov.br/saude/pt-br/centrais-de-conteudo/publicacoes/publicacoes-svs/tuberculose/manual-de-recomendacoes-e-para-diagnostico-laboratorial-de-tuberculose-e-micobacterias-nao-tuberculosas-de-interesse-em-saude-publica-no-brasil.pdf/view"> Manual de Recomendações para o Diagnóstico Laboratorial de Tuberculose e Micobactérias não Tuberculosas de Interesse em Saúde Pública no Brasil.</a>
                         </p>
                         <br>
                         <p>
